--- a/app/views/simcards/index.html.haml
+++ b/app/views/simcards/index.html.haml
@@ -81,7 +81,10 @@
                         %td.small-cell.v-align-middle= check_box_tag "simcard_ids[]", simcard.id, nil , class: "simcard_checkbox"
                         %td= link_to simcard.telephone_number, simcard
                         %td= simcard.try(:teleprovider).try(:name)
-                        %td= link_to 'Edit', edit_simcard_path(simcard)
+                        %td
+                          = link_to 'Edit', edit_simcard_path(simcard)
+                          &nbsp; | &nbsp;
+                          = link_to 'Destroy', simcard, method: :delete, data: { confirm: 'Are you sure want to delete this simcard?' }
 
 #quick-access.admin-bar{:style => "bottom: -115px;"}
   .admin-bar-inner
