--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(@user) do |f|
+= form_for(@user, html: { id: 'form-users' }) do |f|
   - if @user.errors.any?
     #error_explanation
       %h2
