--- a/app/views/car_models/_form.html.haml
+++ b/app/views/car_models/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @car_model do |f|
+= form_for(@car_model, html: { id: 'form-car-model' }) do |f|
   - if @car_model.errors.any?
     #error_explanation
       %h2= "#{pluralize(@car_model.errors.count, "error")} prohibited this car_model from being saved:"
