--- a/app/views/car_types/_form.html.haml
+++ b/app/views/car_types/_form.html.haml
@@ -6,7 +6,7 @@
         = title
 
 
-= form_for @car_type do |f|
+= form_for(@car_type, html: { id: 'form-car-type' }) do |f|
   - if @car_type.errors.any?
     #error_explanation
       %h2= "#{pluralize(@car_type.errors.count, "error")} prohibited this car_type from being saved:"
