--- a/app/views/device_types/_form.html.haml
+++ b/app/views/device_types/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @device_type do |f|
+= form_for(@device_type, html: { id: 'form-device-type' }) do |f|
   - if @device_type.errors.any?
     #error_explanation
       %h2= "#{pluralize(@device_type.errors.count, "error")} prohibited this device_type from being saved:"
