Fix invite by email employee - add confirmable - fix async devise

--- a/app/views/features/_form.html.haml
+++ b/app/views/features/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @feature do |f|
+= form_for(@feature, html: { id: 'form-feature' }) do |f|
   - if @feature.errors.any?
     #error_explanation
       %h2= "#{pluralize(@feature.errors.count, "error")} prohibited this feature from being saved:"
