--- a/app/views/plans/_form.html.haml
+++ b/app/views/plans/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @plan do |f|
+= form_for(@plan, html: { id: 'form-plan' }) do |f|
   - if @plan.errors.any?
     #error_explanation
       %h2= "#{pluralize(@plan.errors.count, "error")} prohibited this plan from being saved:"
