--- a/app/assets/stylesheets/template/style.css.scss
+++ b/app/assets/stylesheets/template/style.css.scss
@@ -1266,7 +1266,7 @@ body.menu-non-fixed .page-sidebar {
 .page-content .content {
   padding-left: 26px;
   padding-right: 26px;
-  padding-top: 83px;
+  margin-top: 80px;
 }
 
 .with-padding{
