--- a/app/views/subscriptions/new.html.haml
+++ b/app/views/subscriptions/new.html.haml
@@ -34,15 +34,15 @@
                 .form-group
                   = label_tag :card_number, "Credit Card Number", class: "form-label"
                   %br
-                  = text_field_tag :card_number, nil, name: nil, class: "form-label"
+                  = text_field_tag :card_number, nil, name: "subscription[card_number]", class: "form-label"
                 .form-group
                   = label_tag :card_code, "Security Code on Card (CVV)", class: "form-label"
                   %br
-                  = text_field_tag :card_code, nil, name: nil, class: "form-label"
+                  = text_field_tag :card_code, nil, name: "subscription[cvc]", class: "form-label"
                 .form-group
                   = label_tag :card_month, "Card Expiration"
-                  = select_month nil, {add_month_numbers: true}, {name: nil, id: "card_month"}
-                  = select_year nil, {start_year: Date.today.year, end_year: Date.today.year+15}, {name: nil, id: "card_year"}
+                  = select_month nil, {add_month_numbers: true}, {name: "subscription[month]", id: "card_month"}
+                  = select_year nil, {start_year: Date.today.year, end_year: Date.today.year+15}, {name: "subscription[year]", id: "card_year"}
               #paymill_error
                 %noscript JavaScript is not enabled and is required for this form. First enable it in your web browser settings.
               .actions
