--- a/app/views/car_manufacturers/index.html.haml
+++ b/app/views/car_manufacturers/index.html.haml
@@ -35,13 +35,14 @@
                       %th
                       = content_tag :th, sort_link(@q, :name)
                       %th 
-                  %tbody
-                    
+                  %tbody                    
                     - @car_manufacturers.each do |car_manufacturer|
                       %tr
                         %td.small-cell.v-align-middle= check_box_tag "car_manufacturer_ids[]", car_manufacturer.id, nil , class: "car_manufacturer_checkbox"
                         %td= link_to car_manufacturer.name, car_manufacturer
                         %td= link_to 'Edit', edit_car_manufacturer_path(car_manufacturer)
+
+              = paginate @car_manufacturers
 
 #quick-access.admin-bar{:style => "bottom: -115px;"}
   .admin-bar-inner
