--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -19,3 +19,5 @@
                 %td= link_to company.name.capitalize, company
                 %td= link_to 'Edit', edit_company_path(company)
                 %td= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' }
+      
+      = paginate @companies
