--- a/app/views/devices/manage.html.haml
+++ b/app/views/devices/manage.html.haml
@@ -27,8 +27,8 @@
                   %td
                     .label.label-success= "Active"
                   %td
-
-
+                  
+          = paginate @devices
 
   .col-md-4
     .grid.simple
