--- a/app/views/features/index.html.haml
+++ b/app/views/features/index.html.haml
@@ -27,3 +27,5 @@
                   %td= feature.role
                   %td= link_to 'Edit', edit_feature_path(feature)
                   %td= link_to 'Destroy', feature, :method => :delete, :data => { :confirm => 'Are you sure?' }      
+
+        = paginate @features
