--- a/app/views/rules/index.html.haml
+++ b/app/views/rules/index.html.haml
@@ -18,7 +18,6 @@
                 %th # of parameters
                 %th
                 %th
-
             %tbody           
             - @rules.each do |rule|
               %tr
@@ -27,4 +26,4 @@
                 %td= link_to 'Edit', edit_rule_path(rule)
                 %td= link_to 'Destroy', rule, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-
+        = paginate @rules      
