--- a/app/views/alarm_notifications/index.html.haml
+++ b/app/views/alarm_notifications/index.html.haml
@@ -27,6 +27,7 @@
                       %td= link_to alert.try(:alarm).try(:name), alert.alarm
                       %td= "#{pretty_date(alert.created_at)} at #{pretty_time(alert.created_at)}"
 
+            = paginate @alerts
 
 #quick-access.admin-bar{:style => "bottom: -115px;"}
   .admin-bar-inner
