--- a/app/views/device_manufacturers/index.html.haml
+++ b/app/views/device_manufacturers/index.html.haml
@@ -34,13 +34,14 @@
                       %th
                       = content_tag :th, sort_link(@q, :name)
                       %th
-                  %tbody
-                    
+                  %tbody                   
                     - @device_manufacturers.each do |device_manufacturer|
                       %tr
                         %td.small-cell.v-align-middle= check_box_tag "device_manufacturer_ids[]", device_manufacturer.id, nil , class: "device_manufacturer_checkbox"
                         %td= link_to device_manufacturer.name, device_manufacturer
                         %td= link_to 'Edit', edit_device_manufacturer_path(device_manufacturer)
+
+              = paginate @device_manufacturers
 
 #quick-access.admin-bar{:style => "bottom: -115px;"}
   .admin-bar-inner
