--- a/app/views/work_schedules/index.html.haml
+++ b/app/views/work_schedules/index.html.haml
@@ -28,6 +28,8 @@
                       &nbsp; | &nbsp; 
                       = link_to 'Delete', work_schedule, method: :delete, data: { confirm: "Are you sure want to delete this work schedule?" }
 
+          = paginate @work_schedules
+
 #quick-access.admin-bar{:style => "bottom: -115px;"}
   .admin-bar-inner
     %button.btn.btn-danger.btn-add{type: "button", id: "batch_destroy"}
