Move to slim and fix alerts count

--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -13,8 +13,7 @@
         %span.title
           Alerts
         %span.badge.badge-danger.pull-right
-          =AlarmNotification.all.count
-
+          = @alerts_count
 
   %li
     %a{:href => "javascript:;"}
