--- a/app/views/alarms/edit.html.slim
+++ b/app/views/alarms/edit.html.slim
@@ -2,8 +2,7 @@
   .col-md-12
     .page-title
       = link_to raw("<i class='icon-custom-left'></i>"), alarms_path
-      %h3
-        New Alarm 
+      h3 Edit Alarm 
 .row
   .col-md-12
     = render 'form'
