--- a/app/views/device_models/_form.html.slim
+++ b/app/views/device_models/_form.html.slim
@@ -1,10 +1,10 @@
 = form_for(@device_model, html: { id: 'form-device-model' }) do |f|
   - if @device_model.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@device_model.errors.count, "error")} prohibited this device_model from being saved:"
-      %ul
+      h2 = "#{pluralize(@device_model.errors.count, "error")} prohibited this device_model from being saved:"
+      ul
         - @device_model.errors.full_messages.each do |msg|
-          %li= msg
+          li = msg
 
   .form-group
     = f.label :name, class: "form-label"
