--- a/app/views/device_types/edit.html.slim
+++ b/app/views/device_types/edit.html.slim
@@ -3,16 +3,15 @@
     .col-md-12
       .page-title
         = link_to raw("<i class='icon-custom-left'></i>"), device_types_path
-        %h3
-          Edit Device Type
+        h3 Edit Device Type
 
   .row
     .col-md-12
       .grid.simple
         .grid-title 
-          %h4
-            Device type  
-            %span.semi-bold details
+          h4
+            | Device type  
+            span.semi-bold details
         .grid-body 
           .row
             .col-md-8.col-sm-8.col-xs-8
