--- a/app/views/devices/show.html.slim
+++ b/app/views/devices/show.html.slim
@@ -3,8 +3,7 @@
     .col-md-8.col-lg-8.col-sm-8.col-xs-8 
       .page-title
         = link_to raw("<i class='icon-custom-left'></i>"), devices_path
-        %h3
-          Device  
+        h3 Device  
     .col-md-4.col-lg-4.col-sm-4.col-xs-4 
       .pull-right= link_to 'Edit', edit_device_path(@device), class: "btn btn-success"
 
@@ -14,20 +13,20 @@
       .grid.simple
         .grid-body 
           .form-group
-            %b Emei:
+            b Emei:
             = @device.emei
           .form-group
-            %b Cost price:
+            b Cost price:
             = @device.cost_price
           .form-group
-            %b Device Model:
+            b Device Model:
             = link_to @device.try(:device_model).try(:name), @device.try(:device_model)
           .form-group
-            %b Device Type:
+            b Device Type:
             = link_to @device.try(:device_type).try(:name), @device.try(:device_type)
           .form-group
-            %b Vehicle:
+            b Vehicle:
             = link_to @device.try(:car).try(:numberplate).to_s , @device.car
           .form-group
-            %b Simcard:
+            b Simcard:
             = link_to @device.try(:simcard).try(:telephone_number).to_s , @device.try(:simcard)
