Add toastr to change flash message

--- a/app/views/car_manufacturers/index.html.slim
+++ b/app/views/car_manufacturers/index.html.slim
@@ -13,7 +13,7 @@
         .grid-title 
           h4 Search 
           .tools
-            a.collapse{href: "javascript:;"}
+            a.collapse href="javascript:;"
         .grid-body 
           = search_form_for @q do |f| 
             .form-group
