--- a/app/views/car_models/index.html.slim
+++ b/app/views/car_models/index.html.slim
@@ -66,5 +66,5 @@
   .admin-bar-inner
     button.btn.btn-danger.btn-add#batch_destroy type="button"
       i.icon-trash Move to trash
-    button.btn.btn-white.btn-cancel{:type => "button"} Cancel
+    button.btn.btn-white.btn-cancel type="button" Cancel
 
