--- a/app/views/devise/confirmations/new.html.slim
+++ b/app/views/devise/confirmations/new.html.slim
@@ -2,17 +2,16 @@
   .col-md-12
     .grid.simple
       .grid-title.no-border
-        %h3
-          Resend confirmation instructions
+        h3 Resend confirmation instructions
       .grid-body.no-border
-        %br/
+        br/
         .row
           .col-md-8.col-sm-8.col-xs-8
 			= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
 			  = devise_error_messages!
-			  %div
+			  div
 			    = f.label :email
-			    %br/
+			    br/
 			    = f.email_field :email, autofocus: true
-			  %div= f.submit "Resend confirmation instructions"
+			  div= f.submit "Resend confirmation instructions"
 			= render "devise/shared/links"
