--- a/app/views/reporting/_tab_header.html.slim
+++ b/app/views/reporting/_tab_header.html.slim
@@ -3,6 +3,6 @@ li class="#{'active' if current_page?(reports_vehicles_path)}"
 li class="#{'active' if current_page?(reports_devices_path)}"
   a href="/reports/devices" Devices
 li class="#{'active' if current_page?(reports_simcards_path)}"
-  a href="/reports/simcards"} Simcards
+  a href="/reports/simcards" Simcards
 li class="#{'active' if current_page?(reports_users_path)}"
 	a href="/reports/users" Users
