--- a/app/views/regions/index.html.slim
+++ b/app/views/regions/index.html.slim
@@ -28,7 +28,7 @@
                       = link_to region.name, region
                     td
                       = link_to 'Edit', edit_region_path(region)
-                      &nbsp; | &nbsp; 
+                      | &nbsp; | &nbsp; 
                       = link_to 'Delete', region, method: :delete, data: { confirm: "Are you sure want to delete this region?" }
 
           = paginate @regions
