--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -20,5 +20,5 @@
     = f.label :email, :class => "form-label"
     = f.text_field :email, :class => "form-control"
 
-  .form-actions{style: 'text-align: right;'}
+  .form-actions style='text-align: right;'
     = f.submit "Submit", class: "btn btn-primary"
