--- a/app/views/plan_types/show.html.slim
+++ b/app/views/plan_types/show.html.slim
@@ -3,16 +3,14 @@
     .col-md-8.col-lg-8.col-sm-8.col-xs-8 
       .page-title
         = link_to raw("<i class='icon-custom-left'></i>"), plan_types_path
-        %h3
-          Plan type  
+        h3 Plan type  
     .col-md-4.col-lg-4.col-sm-4.col-xs-4 
-      .pull-right= link_to 'Edit', edit_plan_type_path(@plan_type), class: "btn btn-success"
-
+      .pull-right = link_to 'Edit', edit_plan_type_path(@plan_type), class: "btn btn-success"
 
   .row
     .col-md-12
       .grid.simple
         .grid-body 
-          %p
-            %b Name:
+          p
+            b Name:
             = @plan_type.name
