--- a/app/views/teleproviders/new.html.slim
+++ b/app/views/teleproviders/new.html.slim
@@ -2,15 +2,14 @@
   .col-md-12
     .page-title
       = link_to raw("<i class='icon-custom-left'></i>"), teleproviders_path
-      %h3
-        Create Teleprovider
+      h3 Create Teleprovider
 .row
   .col-md-12
     .grid.simple
       .grid-title 
-        %h4
-          Teleprovider 
-          %span.semi-bold details
+        h4
+          | Teleprovider 
+          span.semi-bold details
       .grid-body 
         .row
           .col-md-8.col-sm-8.col-xs-8
