--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,10 +5,10 @@ html
 
     meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1"
 
-    = stylesheet_link_tag 'application', media: 'all'
+    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
 
     script src="//maps.google.com/maps/api/js?v=3.13&sensor=false&libraries=geometry" type="text/javascript"
-    = javascript_include_tag 'application'
+    = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = javascript_include_tag 'https://bridge.paymill.com/'
     javascript:
       var PAYMILL_PUBLIC_KEY = '82116769296bc2931f43f72dae901142';
@@ -18,6 +18,7 @@ html
   body.error-body data-class-name="#{js_class_name}" class="condense-menu #{css_class_name}"
 
     = include_gon(watch: true, init: true)
+
     = render 'toastr_rails/flash'
 
     / BEGIN HEADER
