Add breadcrumb and fix design

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,6 +46,9 @@
  *= require chosen
  *= require toastr_rails
  *= require map
+ *= require sweet-alert
+ *= require sweetalert
+ *= require breadcrumb
  */
 
 .map-tooltip{
