--- a/app/views/alarm_notifications/index.html.slim
+++ b/app/views/alarm_notifications/index.html.slim
@@ -1,38 +1,37 @@
-.row
-  .col-md-8.col-lg-8.col-sm-8.col-xs-8
-    .page-title
-      h3 Alerts
-
+.row.page-heading
+  .col-md-12
+    h2 Alerts
+  ol.breadcrumb
+    = render_breadcrumbs
 .row
   .col-md-12
     = form_tag batch_archive_alarm_notifications_path, id: "archive_alarm_notifiations", :method => :put do
-      .row
-        .col-md-12
-          .grid.simple
-            .grid-body
-              table.table.no-more-tables
-                thead
+      .grid.simple
+        .grid-body
+          .table-responsive
+            table.table
+              thead
+                tr
+                  th
+                  th Vehicle
+                  th Alarm triggered
+                  th Triggered at
+                  th Action
+              tbody
+                - @alerts.each do |alert|
                   tr
-                    th
-                    th Vehicle
-                    th Alarm triggered
-                    th Triggered at
-                    th Action
-                tbody
-                  - @alerts.each do |alert|
-                    tr
-                      td.small-cell.v-align-middle 
-                        = check_box_tag "alarm_notification_ids[]", alert.id, nil , class: "alarm_notification_checkbox"
-                      td
-                        = link_to alert.try(:car).try(:name), alert.car
-                      td
-                        = link_to alert.try(:alarm).try(:name), alert.alarm
-                      td
-                        = "#{pretty_date(alert.created_at)} at #{pretty_time(alert.created_at)}"
-                      td
-                        = link_to 'Archive', archive_alarm_notification_path(alert), data: { confirm: 'Are you sure want to archieve this alert?' }, method: :put
+                    td.small-cell.v-align-middle 
+                      = check_box_tag "alarm_notification_ids[]", alert.id, nil , class: "alarm_notification_checkbox"
+                    td
+                      = link_to alert.try(:car).try(:name), alert.car
+                    td
+                      = link_to alert.try(:alarm).try(:name), alert.alarm
+                    td
+                      = "#{pretty_date(alert.created_at)} at #{pretty_time(alert.created_at)}"
+                    td
+                      = link_to 'Archive', archive_alarm_notification_path(alert), data: { confirm: 'Are you sure want to archieve this alert?' }, method: :put
 
-            p = paginate @alerts
+          p = paginate @alerts
 
 #quick-access.admin-bar style='bottom: -115px;'
   .admin-bar-inner
