--- a/app/views/invitations/edit.html.slim
+++ b/app/views/invitations/edit.html.slim
@@ -5,7 +5,10 @@
 
     .tiles.grey.p-t-20.p-b-20.text-black
       div#frm_login.animated.fadeIn
-        = form_for(resource, as: resource_name, url: invitation_path(resource_name),) do |f|
+        = form_for(resource, as: resource_name, url: invitation_path(resource_name)) do |f|
+          .row
+            = devise_error_messages!
+            = f.hidden_field :invitation_token, value: params[:invitation_token]
           .row.form-row.m-l-20.m-r-20.xs-m-l-10.xs-m-r-10
             .col-md-6.col-sm-6
               = f.password_field :password, :class => "form-control email", :placeholder => "Password"
